# stack-test

./: .gitignore  memo.txt  stack-test.cabal  stack.yaml  twits.txt
app/: Main.hs
src/: Algebra.hs  Binary.hs  Chien.hs  Field.hs  IOAction.hs  Janken.hs  ListSet.hs  ModifyTwit.hs  MyPrelude.hs  Polynomial.hs  Practice.hs  Random.hs  Resultant.hs
