name:                stack-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stack-test#readme
license:             BSD3
license-file:        LICENSE
author:              23prime
maintainer:          hogehoge
copyright:           2017 23prime
category:            haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyPrelude
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , mtl
                     , time
                     , random
                     , text
                     , deepseq
                     , free
                     , containers
                     , ghc
                     , array
                     , free
                     , process
  default-language:    Haskell2010

executable stack-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stack-test
                     , hmatrix
                     , random
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stack-test
